--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    abc
-asdfasdfasdf
+    <!-- unordered list -->
+        <ul>
+            <li><a href="#">Brand</a></li>
+            <li><a href="#">Browe</a></li>
+            <li><a href="#">Sign Up</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Help</a></li>
+        </ul> 
+        <h1>Find a place to stay</h1>
+        <p>Rent from people in over 34,000 cities and 192 countries</p>
+        <h2>Neighborhood Guides</h2>
+        <p>Not sure where to stay?We've created neighborhood guides for cities all around the 
+        <br>world.</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/mexico-city.png?fbclid=IwAR08_uZ8ZUlhqjJgh2R_BETb5ybM8NZw4fzmJqqdnVcF3fpO7vtGTZYfGh4" alt=""><br>
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/ny.png?fbclid=IwAR3mNghh2OIzjtEMxwLQOL8WjoQuTjsQ8cF2I9l_Ydze62zPsgehVfujTbk" alt=""><br>
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/tokyo.png?fbclid=IwAR1EtQGOCxvGFdgu1eA-T0bugnjhk9-7xXGteWOvf_M1zujxnH2KUltXTWA" alt=""><br>
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/paris.png?fbclid=IwAR1hZmWrd96pP38D1ekaBi2jgnEZJtmPs9QWFc_5WdIX5RnQ2CYemeNMlyU" alt=""><br>
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/invite.png?fbclid=IwAR0xEEHcMizDbnp1Qqr_pBhsk-92u_crk4QLz3ZVm3FlvEfbRLnr3BVq5Hc" alt=""><br>
+        <h3>Travel</h3>
+        <p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192<br>countries.</p>
+        <p><a href="">See how to travel on Airbnd</a></p>
+        <h3>Host</h3>
+        <p>Renting ouy your unused space could pay your bills or fund your next vacation.</p>
+        <p><a href="">Learn more about hosting</a></p>
+        <h3>Trust and Safety</h3>
+        <p>From Verified ID to our worldwide customer support team, we've got your back.</p>
+        <p><a href="">Learn about trust at Airbnb</a></p>
+
 </body>
+
 </html>
